--- a/To-Dolist/templates/update_prod.html
+++ b/To-Dolist/templates/update_prod.html
@@ -4,36 +4,40 @@
   <table id="data" class="table table-striped">
     <thead>
       <tr>
-        <th>id</th>
-        <th>title</th>
-        <th>description</th>
-        <th>done</th>
+        <th>ID</th>
+        <th>Title</th>
+        <th>Description</th>
+        <th>Done</th>
+        <th>Action</th>
       </tr>
     </thead>
     <tbody>
       {% for prod in products %}
         <tr>
-          <td>{{ prod.id }}</td>
-          <td>{{ prod.title }}</td>
-          <td>{{ prod.description }}</td>
-          <td>{{ prod.done }}</td>
+          <form method="POST" action="{{ url_for('upd_product') }}">
+            <td>{{ prod.id }}</td>
+            <td>{{ prod.title }}</td>
+            <td>{{ prod.description }}</td>
+            <td>{{ prod.done }}</td>
+            <td>
+              <input type="hidden" name="id" value="{{ prod.id }}">
+              <button type="submit">Edit</button>
+            </td>
+          </form>
         </tr>
       {% endfor %}
     </tbody>
   </table>
-  <form method="POST">
-    <label for="fname">ID selecionado:</label><br>
-    <input type="text" id="fname" name="id"><br>
-    <label for="fname">Nombre del producto:</label><br>
-    <input type="text" id="fname" name="title"><br>
-    <label for="lname">Descripcion del producto:</label><br>
-    <input type="text" id="lname" name="description"><br>
-    <label for="lname">Terminada la tarea:</label><br>
-    <input type="text" id="lname" name="done"><br>
-    <!-- <input type="radio" id="html" name="done" value="True">
-    <label for="html">Terminado</label><br>
-    <input type="radio" id="css" name="done" value="False">
-    <label for="css">No terminado</label><br><br> -->
-    <button type="submit">Submit</button>
-</form>
+  
+  <form method="POST" action="{{ url_for('upd_product') }}">
+    <label for="id">ID del producto:</label>
+    <input type="text" name="id" id="id"><br>
+    <label for="title">Nombre del producto:</label>
+    <input type="text" name="title" id="title"><br>
+    <label for="description">Descripción:</label>
+    <input type="text" name="description" id="description"><br>
+    <label for="done">Terminado:</label>
+    <input type="text" name="done" id="done"><br>
+    <button type="submit">Guardar cambios</button>
+  </form>
 {% endblock %}
